# scape

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/notebooks/: judges_prizes_helpers.py  judges_prizes_notebook.ipynb  quick-start.ipynb  solution.ipynb  subset-genes.ipynb
scape/: __init__.py  __main__.py  _api.py  _callbacks.py  _io.py  _losses.py  _model.py  _util.py
tests/: test_multitask.py  test_quickstart.py
